--- a/src/components/Button.mdx
+++ b/src/components/Button.mdx
@@ -14,11 +14,7 @@ import { Playground, PropsTable } from "docz";
 
 ## Basic usage
 <Playground>
-    <Button>Click me!</Button>
-    <Button kind="secondary">Click me!</Button>
-    <Button kind="cancel">Click me!</Button>
-    <Button kind="dark">Click me!</Button>
-    <Button kind="gray">Click me!</Button>
+  <Button>Click me</Button>
 </Playground>
 
 ## Differents sizes
@@ -26,6 +22,15 @@ import { Playground, PropsTable } from "docz";
     <Button scale="small">Small</Button>
     <Button kind="secondary">Click me!</Button>
     <Button kind="cancel" scale="big">Click me!</Button>
+</Playground>
+
+## With different colors
+<Playground>
+  <Button kind="primary">Click me</Button>
+  <Button kind="secondary">Click me</Button>
+  <Button kind="cancel">Click me</Button>
+  <Button kind="dark">Click me</Button>
+  <Button kind="gray">Click me</Button>
 </Playground>
 
 
